# BCA-Index-Bitcoin

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  btc-last_block_time.sh  dot.profile  dune-project  export_blocks_to_duckdb.sh  get.sh  json2duckdb.sh  json2pg.sh  lsblocks.sh  shell.nix  update.sh
.tekton/: .gitignore  README.md  ca-cert-template.yaml  minio-credentials-template.yaml  rpc-credentials-template.yaml  serviceaccount.yaml  task-idx-btc-run.yaml  task-idx-btc.yaml
archive/: get.sh
duckdb/: btc_block.sql  btc_transaction.sql
grouping/: README.md
postgres/: btc_block.sql  btc_transaction.sql
qa/: README.md  eval_chunk.sh  qa_chunk.sh
uml/: block.puml  tx.puml  txin.puml  txout.puml
